--- a/styles.css
+++ b/styles.css
@@ -64,3 +64,36 @@ body{
     padding: 3px 15px;
     border: none;
 }
+
+.information{
+    display: flex;
+    flex-direction: column;
+    row-gap: 40px;
+    padding: 20px 300px 100px;
+}
+
+.information-content{
+    display: flex;
+    justify-content: center;
+    column-gap: 50px;
+}
+
+.information img{
+    width: 150px;
+    height: 150px;
+}
+
+.information-header{
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    font-size: 36px;
+    color: #1F2937;
+    font-weight: 900;
+}
+
+.illustration{
+    flex-basis: 150px;
+    text-align: center;
+}
+
