--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,9 @@ body{
 
 .header-logo{
     margin-right: auto;
+}
+.header-logo,
+.call-text{
     font-size: 24px;
     font-weight: 900;
     color: #F9FAF8;
@@ -26,7 +29,8 @@ body{
 }
 
 .header-links,
-.hero-subtext{
+.hero-subtext,
+.call-subtext{
     font-size: 18px;
     color: #E5E7EB;
 }
@@ -55,7 +59,7 @@ body{
     gap: 10px;
 }
 
-.hero-signup button{
+.signup button{
     color: #F9FAF8;
     background-color: #3882F6;
     border-color: #3882F6;
@@ -115,4 +119,27 @@ body{
 .quote-author{
     margin-left: auto;
     font-weight: 900;
+}
+
+.call{
+    display: flex;
+    background-color: #3882F6;
+    justify-content: space-between;
+    margin: 100px 150px;
+    padding: 50px 150px;
+}
+
+.call-content{
+    display: flex;
+    flex-direction: column;
+}
+
+.call .signup button{
+    border: 2px solid #F9FAF8;
+}
+
+.call .signup{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
