--- a/styles.css
+++ b/styles.css
@@ -91,6 +91,8 @@ body{
 .information img{
     width: 150px;
     height: 150px;
+    border: 5px solid #3882F6;
+    border-radius: 10px;
 }
 
 .information-header{
@@ -133,6 +135,7 @@ body{
     justify-content: space-between;
     margin: 100px 150px;
     padding: 50px 150px;
+    border-radius: 12px;
 }
 
 .call-content{
@@ -150,7 +153,7 @@ body{
     align-items: center;
 }
 
-.footer{
+footer{
     display: flex;
     justify-content: center;
     align-items: center;
